# frontier_exploration_turtlebot

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
docs/: explorerdoxy.doxyfile
docs/html/: CollisionDetectorTest_8cpp.html  CollisionDetectorTest_8cpp.js  CollisionDetectorTest_8cpp__incl.map  CollisionDetectorTest_8cpp__incl.md5  CollisionDetectorTest_8cpp_source.html  CollisionDetector_8cpp.html  CollisionDetector_8cpp__incl.map  CollisionDetector_8cpp__incl.md5  CollisionDetector_8cpp_source.html  CollisionDetector_8h.html  CollisionDetector_8h__dep__incl.map  CollisionDetector_8h__incl.map  CollisionDetector_8h_source.html  PathPlanningTest_8cpp.html  PathPlanningTest_8cpp.js  PathPlanningTest_8cpp__incl.map  PathPlanningTest_8cpp_source.html  PathPlanning_8cpp.html  PathPlanning_8cpp__incl.map  PathPlanning_8cpp__incl.md5  PathPlanning_8cpp_source.html  PathPlanning_8h.html  PathPlanning_8h__dep__incl.map  PathPlanning_8h__dep__incl.md5  PathPlanning_8h__incl.map  PathPlanning_8h__incl.md5  PathPlanning_8h_source.html  annotated.html  annotated_dup.js  classCollisionDetector-members.html  classCollisionDetector.html  classCollisionDetector.js  classPathPlanning-members.html  classPathPlanning.html  classPathPlanning.js  classPathPlanning__coll__graph.map  classPathPlanning__coll__graph.md5  classes.html  dir_000002_000000.html  dir_000003_000000.html  (+29 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  (+11 more)
docs/latex/: CollisionDetectorTest_8cpp.tex  CollisionDetectorTest_8cpp__incl.md5  CollisionDetector_8cpp.tex  CollisionDetector_8cpp__incl.md5  CollisionDetector_8h.tex  CollisionDetector_8h__dep__incl.md5  CollisionDetector_8h__incl.md5  PathPlanningTest_8cpp.tex  PathPlanningTest_8cpp__incl.md5  PathPlanning_8cpp.tex  PathPlanning_8cpp__incl.md5  PathPlanning_8h.tex  PathPlanning_8h__dep__incl.md5  PathPlanning_8h__incl.md5  annotated.tex  classCollisionDetector.tex  classPathPlanning.tex  classPathPlanning__coll__graph.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_4af1909fcb234603ea952fce24c95722.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.tex  src_2main_8cpp.tex  src_2main_8cpp__incl.md5  test_2main_8cpp.tex  test_2main_8cpp__incl.md5
docs/rtf/: CollisionDetector_8h__dep__incl.md5  CollisionDetector_8h__incl.md5  PathPlanningTest_8cpp__incl.md5  dir_13e138d54eb8818da29c3992edef070a.rtf  dir_4af1909fcb234603ea952fce24c95722.rtf  dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.rtf  refman.rtf  src_2main_8cpp__incl.md5  test_2main_8cpp__incl.md5
include/frontier_exploration_turtlebot/: CollisionDetector.h  Guidance.h  PathPlanning.h
launch/: demo.launch
map/: my_map.pgm
results/: cppcheck output.txt  cpplint output.txt
src/: CollisionDetector.cpp  Guidance.cpp  PathPlanning.cpp  main.cpp
test/: CollisionDetectorTest.cpp  GuidanceTest.cpp  PathPlanningTest.cpp  Test.launch  main.cpp
world/: turtlebotDemo.world  turtlebotRoom.world
